# jax-core

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
contracts/: remappings.txt
contracts/broadcast/: foundry.toml
contracts/broadcast/src/: Contract.sol
contracts/broadcast/test/: Contract.t.sol
contracts/script/: Factory.s.sol  Token.s.sol
contracts/src/: Factory.sol  Incentives.sol  JAXToken.sol  Pool.sol  RewardPool.sol
contracts/src/interface/: IAVS.sol  IIncredibleSquaringTaskManager.sol
contracts/src/libraries/: Sha512.sol
contracts/test/: BaseTest.t.sol  TestED25519.sol
contracts/test/mocks/: AVSMock.sol
crates/cli/: .gitignore  Cargo.toml
crates/cli/src/: args.rs  main.rs  state.rs  version.rs
crates/cli/src/ops/: hello.rs  init.rs  mod.rs
crates/common/: Cargo.toml  build.rs
crates/common/src/: client.rs  lib.rs
crates/common/src/api/: client.rs  error.rs  mod.rs
crates/common/src/api/api_requests/: hello.rs  mod.rs
crates/eigen-trust/: Cargo.toml
crates/eigen-trust/src/: eigen_trust.rs  lib.rs  mock.rs  tests.rs  trust_fetcher.rs
crates/node/: Cargo.toml  build.rs
crates/node/src/: config.rs  lib.rs  main.rs  version.rs
crates/node/src/cli/: args.rs  mod.rs
crates/node/src/cli/ops/: init.rs  list.rs  mod.rs  node.rs  pools.rs  probe.rs  query.rs  share.rs  status.rs
crates/node/src/cli/ops/api_client/: mod.rs
crates/node/src/cli/ops/api_client/api_requests/: create_pool.rs  health.rs  list.rs  mod.rs  pools.rs  probe.rs  query.rs  share.rs
crates/node/src/node/: mod.rs  state.rs  tracker.rs  utils.rs
crates/node/src/node/eth/: mod.rs
crates/node/src/node/eth/contracts/: factory.rs  jax_token.rs  mod.rs  pool.rs
crates/node/src/node/http/: error_handlers.rs  mod.rs  server.rs
crates/node/src/node/http/api/: blob.rs  claim_rewards.rs  create_pool.rs  deposit.rs  list.rs  mod.rs  pools.rs  probe.rs  pull.rs  query.rs  share.rs  share_stream.rs
crates/node/src/node/http/health/: livez.rs  mod.rs  readyz.rs
crates/node/src/node/http/html/: mod.rs
crates/node/src/node/http/html/handlers/: blobs.rs  forms.rs  index.rs  mod.rs  pools.rs  query.rs  share.rs
crates/node/src/node/http/html/templates/: base.html  blobs.html
crates/node/src/node/iroh/: blobs_service.rs  endpoint.rs  mod.rs  probe.rs  router.rs
crates/node/static/: app.js  style.css
crates/node/templates/: base.html  blobs.html  index.html  pools.html  probe.html  query.html  share.html
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/protocol/src/tracker/: alpn.rs  announce.rs  discovery.rs  mod.rs  storage.rs
crates/server/: Cargo.toml  Makefile  woo2
crates/server/src/: config.rs  lib.rs  main.rs
crates/server/src/api/: mod.rs
crates/server/src/app/: args.rs  config.rs  mod.rs  state.rs
crates/server/src/app/ops/: init.rs  list_blobs.rs  mod.rs  node.rs  probe.rs  pull.rs  query.rs  serve.rs  share.rs  status.rs
crates/server/src/app/ops/api_client/: client.rs
crates/server/src/app/ops/api_client/api_requests/: health.rs  list_blobs.rs  mod.rs  query.rs  share.rs
crates/server/src/health/: mod.rs
crates/server/src/node/: mod.rs  state.rs  tracker.rs
crates/server/src/node/eth/contracts/: factory.rs  mod.rs  pool.rs
crates/server/src/node/http/: mod.rs
crates/server/src/node/http/api/: list_blobs.rs  mod.rs  probe.rs  query.rs  share.rs
crates/server/src/node/http/health/: readyz.rs  version.rs
crates/server/src/node/iroh/: blobs_service.rs  mod.rs  probe.rs  router.rs
crates/server/src/server/: mod.rs  spawn.rs  state.rs  utils.rs
crates/server/src/server/api/: blob.rs  hello.rs  list_blobs.rs  mod.rs  probe.rs  query.rs  router.rs  share.rs  tracker.rs
crates/server/src/server/health/: liveness.rs  livez.rs  mod.rs  readyz.rs
crates/server/src/server/services/: blob_service.rs  mod.rs  tracker.rs
crates/server/src/server/services/tracker_service/: mod.rs  probe.rs
