[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.dependencies]
anyhow = "1.0.80"
async-trait = "^0.1"
bytes = "1.0"
tokio = { version = "^1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "signal",
  "sync",
  "time",
] }
thiserror = "^2"
tracing = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
iroh = { version = "^0.32", features = ["discovery-pkarr-dht"] }
iroh-blobs = { version = "^0.32", features = ["rpc"] }
iroh-base = { version = "^0.32" }
futures = "^0.3"
rand = "0.8"
bao-tree = { version = "0.13", features = ["tokio_fsm"], default-features = false }
