[package]
name = "jax-cli"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "jax"
path = "src/main.rs"

[dependencies]
jax-common = { path = "../common/" }
anyhow = "1.0.80"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "^2"
tokio = { version = "1.10.0", features = ["full"] }
url = { version = "^2", features = ["serde"] }
async-trait = "0.1.81"
serde_json = "1.0.139"
