[package]
name = "jax-common"
version = "0.2.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
blake3 = { version = "^1", features = ["serde"] }
futures-util = "0.3.30"
http = "^1"
rand = "^0.9"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = "3.8.1"
thiserror = "^2"
tokio = { version = "1.10.0", features = ["full"] }
url = { version = "^2", features = ["serde"] }
reqwest = { version = "^0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }
parking_lot = "^0.12"