[package]
name = "jax"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "hash_convert"
path = "bin/hash_convert.rs"

[dependencies]
jax-eigen-trust = { path = "../eigen-trust" }

anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { version = "0.7", features = ["macros", "multipart"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
console_error_panic_hook = "0.1"
clap = { version = "4.5.4", features = ["derive"] }
dotenvy = "^0.15"
bytes = { workspace = true }
futures = "^0.3"
pico-args = "0.5.0"
tokio = { workspace = true }
tower = { version = "^0.5", features = [
  "load-shed",
  "limit",
  "timeout",
  "util",
] }
tower-http = { version = "^0.6", features = [
  "fs",
  "cors",
  "sensitive-headers",
  "trace",
  "limit",
  "util",
] }
thiserror = { workspace = true }
http = "1"

tracing = { workspace = true }
tracing-appender = { version = "^0.2" }
tracing-futures = { version = "^0.2", default-features = false, features = [
  "std-future",
] }
tracing-subscriber = { version = "^0.3", default-features = false, features = [
  "env-filter",
  "fmt",
  "local-time",
  "time",
  "tracing",
] }
url = "2.5.0"
serde = { workspace = true }
time = { version = "0.3.36", features = ["serde"] }
serde_json = "1.0.115"
reqwest = { version = "^0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }
axum-extra = { version = "^0.10", features = ["typed-header"] }
tokio-util = { version = "0.7", features = ["io"] }

iroh = { workspace = true }
iroh-blobs = { workspace = true }
iroh-base = { workspace = true }
rand = "0.8"
rand_core = "^0.6"
bao-tree = { version = "0.13", features = ["tokio_fsm"], default-features = false }
rand_chacha = "0.9.0"
uuid = { version = "1.3", features = ["v4"] }
alloy = { version = "0.11", features = [
    "eips",
    "full",
    "hyper",
    "json-rpc",
    "node-bindings",
    "rpc-client",
] }
futures-util = "0.3.31"
alloy-chains = "0.1.63"
ed25519 = "2.2.3"
