[package]
name = "jax-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = "^0.3"
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
time = { version = "0.3.36", features = ["serde"] }
redb = "^2"
flume = "0.11.0"
iroh = { workspace = true }
iroh-blobs = { workspace = true }
iroh-base = { workspace = true }
rand = { workspace = true }
bao-tree = { version = "0.13", features = ["tokio_fsm"], default-features = false }
bincode = "1.3" 